@@ -87,6 +87,9 @@ static void usage_NORETURN ( int need_help )
 "\n"
 "  tool-selection option, with default in [ ]:\n"
 "    --tool=<name>             use the Valgrind tool named <name> [memcheck]\n"
+"                              available tools are:\n"
+"                              memcheck cachegrind callgrind helgrind drd\n"
+"                              massif dhat lackey none exp-bbv\n"
 "\n"
 "  basic user options for all Valgrind tools, with defaults in [ ]:\n"
 "    -h --help                 show this message\n"
