@@ -2,6 +2,9 @@ usage: valgrind [options] prog-and-args
 
   tool-selection option, with default in [ ]:
     --tool=<name>             use the Valgrind tool named <name> [memcheck]
+                              available tools are:
+                              memcheck cachegrind callgrind helgrind drd
+                              massif dhat lackey none exp-bbv
 
   basic user options for all Valgrind tools, with defaults in [ ]:
     -h --help                 show this message
@@ -31,8 +34,6 @@ usage: valgrind [options] prog-and-args
     --log-fd=<number>         log messages to file descriptor [2=stderr]
     --log-file=<file>         log messages to <file>
     --log-socket=ipaddr:port  log messages to socket ipaddr:port
-    --enable-debuginfod=no|yes query debuginfod servers for missing
-                              debuginfo [yes]
 
   user options for Valgrind tools that report errors:
     --xml=yes                 emit error output in XML (some tools only)
